NTP4/apps page: fix page stickiness

R=estade@chromium.org
BUG=591225

Review URL: https://codereview.chromium.org/1757673002

Cr-Commit-Position: refs/heads/master@{#379115}

Former-commit-id: 1f8acc51c0c5d9fea66917884b927eff8f3e570e