chrome/browser/ui/webui/ntp/new_tab_ui.cc
@@ -17,7 +17,6 @@
 #include "chrome/browser/ui/webui/ntp/app_launcher_handler.h"
 #include "chrome/browser/ui/webui/ntp/core_app_launcher_handler.h"
 #include "chrome/browser/ui/webui/ntp/favicon_webui_handler.h"
-#include "chrome/browser/ui/webui/ntp/new_tab_page_handler.h"
 #include "chrome/browser/ui/webui/ntp/new_tab_page_sync_handler.h"
 #include "chrome/browser/ui/webui/ntp/ntp_resource_cache.h"
 #include "chrome/browser/ui/webui/ntp/ntp_resource_cache_factory.h"
@@ -93,7 +92,6 @@ NewTabUI::NewTabUI(content::WebUI* web_ui)
   if (!profile->IsOffTheRecord()) {
     web_ui->AddMessageHandler(new MetricsHandler());
     web_ui->AddMessageHandler(new FaviconWebUIHandler());
-    web_ui->AddMessageHandler(new NewTabPageHandler());
     web_ui->AddMessageHandler(new CoreAppLauncherHandler());
     web_ui->AddMessageHandler(new NewTabPageSyncHandler());
 
@@ -208,7 +206,7 @@ void NewTabUI::OnShowBookmarkBarChanged() {
 void NewTabUI::RegisterProfilePrefs(
     user_prefs::PrefRegistrySyncable* registry) {
   CoreAppLauncherHandler::RegisterProfilePrefs(registry);
-  NewTabPageHandler::RegisterProfilePrefs(registry);
+  AppLauncherHandler::RegisterProfilePrefs(registry);
 }
 
 // static
